--- a/scss/layout/page/_about.scss
+++ b/scss/layout/page/_about.scss
@@ -60,6 +60,9 @@
     figure{
       height: 100px;
       width: 100%;
+      background-color: #e8e8e9;
+      padding: 10px;
+      border-radius: 3px;
       img{
         object-fit: contain !important;
       }
