--- a/scss/layout/page/_landing-pages.scss
+++ b/scss/layout/page/_landing-pages.scss
@@ -9,7 +9,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgb(28 27 27 / 81%);
+    background-color: rgba(34, 34, 34, 0.81);
     z-index: 1;
   }
   .banner-text {
