--- a/scss/layout/page/_about.scss
+++ b/scss/layout/page/_about.scss
@@ -59,10 +59,10 @@
   .client-card{
     figure{
       height: 100px;
-      width: 100%;
-      background-color: #e8e8e9;
-      padding: 10px;
-      border-radius: 3px;
+      background-color: white;
+      box-shadow: 0px 0px 7px 1px #e9e7e7;
+      padding: 20px;
+      border-radius: 5px;
       img{
         object-fit: contain !important;
       }
