--- a/scss/layout/page/_about.scss
+++ b/scss/layout/page/_about.scss
@@ -58,10 +58,10 @@
 .Client-section{
   .client-card{
     figure{
-      height: 100px;
+      height: 120px;
       background-color: white;
       box-shadow: 0px 0px 7px 1px #e9e7e7;
-      padding: 20px;
+      padding: 10px 20px;
       border-radius: 5px;
       img{
         object-fit: contain !important;
