--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -14,6 +14,21 @@ body {
   font-family: "Roboto", sans-serif;
   min-height: 100vh;
 }
+.open-opacity {
+  position: fixed;
+  width: 100%;
+  &::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #000000;
+    opacity: 0.6;
+    z-index: 9;
+  }
+}
 .container {
   width: 90% !important;
   margin: 0 auto !important;
