--- a/scss/layout/page/_landing-pages.scss
+++ b/scss/layout/page/_landing-pages.scss
@@ -21,6 +21,10 @@
       font-size: 56px !important;
       letter-spacing: 2px;
       font-weight: 700;
+      white-space: nowrap;
+      @media (max-width: 480px) {
+        font-size: 36px !important;
+      }
       span {
         color: $secondary-color;
       }
@@ -29,6 +33,9 @@
       font-size: 24px;
       letter-spacing: 1px;
       line-height: 32px;
+      @media (max-width: 480px) {
+        font-size: 20px;
+      }
       .typingText{
         font-weight: 700;
         padding-bottom:3px;
