--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -4,3 +4,9 @@
 @import "page/about";
 @import "page/contact-us";
 @import "page/portfolio";
+@import "page/innerpage";
+@import "page/blog";
+@import "page/gallery";
+@import "page/contact";
+
+
