--- a/scss/layout/page/_portfolio.scss
+++ b/scss/layout/page/_portfolio.scss
@@ -7,6 +7,9 @@
     width: fit-content;
     margin-inline: auto;
     border-radius: 50px;
+    @media(max-width:991px){
+    border: none;
+    }
     button {
       font-size: 14px;
       font-weight: 600;
@@ -19,6 +22,10 @@
       border: none;
       background: none;
       border-radius: 50px;
+      @media(max-width:991px){
+      font-size: 12px;
+        padding: 5px 10px ;
+        }
     }
     .active {
       background-color: $secondary-color;
